# portfolio-projects

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  app.py  async.py  d_llist.py  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yml  dockerfile  dockerignore.txt  fancy_tuple.py  fb_ads_manager.py  fb_manager.py  ffmpeg_multithread.py  index.py  main.py  makefile  pyproject.toml  requirements.txt  reverse_arg.py  run.py  s_llist.py  schema.py  selenium.py  threads.py  verify.py
2fa-automation/: automation.py  web_server.py
OOP/: d_llist.py  recursion.py  s_llist.py
api/: Dockerfile  build_rules.py  cron_script.sh  dev_start.sh  gunicorn_conf.py  prestart.sh  requirements.txt  start.sh
automation_2fa/: README.md  automation.py  modules.py  web_server.py
backend/: .dockerignore  .env  Dockerfile  clamav.env  config.py  cron_script.sh  dev_start.sh  dockerfile  main.py  prestart.sh  requirements.txt  run.py  yara-forge-config.yml  yara_clone.py
clamav/: Dockerfile.clamav  cron_script.sh
coderbytes/: json_cleaning.py  mission_test.py  sql_query.py
data-engineering/: CSV PAF Changes.csv  fn_ingestion.py  oop_ingestion.py
fb_manager/: fb_ads_manager.py  requirements.txt  verify.py
hennge/: submition.py  task.py
lambda/: process.py  send_email.py  validate.py
lambdas/: process.py  send_email.py  validate.py
lib/: file_processing_cdk_stack.py
miscellaneous/: da_decoder.py  sales_report.py  scraping.py  selenium.py
others/: recursion.py
playlist/: config.json  playlist.py  playlist_gui.py  (+3 more)
(+114 files in other folders)
