[tool.poetry]
name = "selenium-duo-key-extraction"
version = "0.1.0"
description = ""
authors = ["Shapon Sheikh <shsheikhbd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyotp = "^2.9.0"
selenium = "^4.22.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
